--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,19 @@
 	</properties>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>${project.build.sourceDirectory}</directory>
+				<includes>
+					<include>**/*.fxml</include>
+					<include>**/*.css</include>
+				</includes>
+			</resource>
+		</resources>
+		
 		<pluginManagement>
 			<plugins>
 				<plugin>
