--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>8.1.2</version>
 				<configuration>
-					<mainClass>earpitch.gui.EarPitch</mainClass>
+					<mainClass>earpitch.gui.launcher.EarPitch</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
