--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,7 +10,19 @@
 		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 	</properties>
 
+	<organization>
+		<name>Christoph Ingwersen</name>
+	</organization>
+
+	<scm>
+		<url>scm:git:git@github.com:chringwer/EarPitch.git</url>
+		<connection>scm:git:git@github.com:chringwer/EarPitch.git</connection>
+		<developerConnection>scm:git:git@github.com:chringwer/EarPitch.git</developerConnection>
+	</scm>
+
 	<build>
+		<finalName>EarPitch</finalName>
+	
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -35,7 +46,14 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
-
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5.1</version>
+					<configuration>
+						<tagNameFormat>v@{project.version}</tagNameFormat>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -75,6 +93,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>8.1.2</version>
 				<configuration>
+					<verbose>true</verbose>
 					<mainClass>earpitch.gui.launcher.EarPitch</mainClass>
 				</configuration>
 			</plugin>
