--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>earpitch</groupId>
 	<artifactId>earpitch</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
@@ -18,7 +18,7 @@
 		<url>scm:git:git@github.com:chringwer/EarPitch.git</url>
 		<connection>scm:git:git@github.com:chringwer/EarPitch.git</connection>
 		<developerConnection>scm:git:git@github.com:chringwer/EarPitch.git</developerConnection>
-	  <tag>v1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<build>
